# pygacity

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
AutoprobClass/: autoprob.cls
Chem/: Compound.py  Reaction.py  System.py
Latex/: driver.pytxcode  driver.tex  header.tex  properties_binaries_database.xlsx
PythonTex/: desuperheater.tex
Sandlersteam/: README.md  Sandlersteam.py
Sandlersteam/data/: SandlerSatdSteamTableP1.txt  SandlerSatdSteamTableP2.txt  SandlerSatdSteamTableT1.txt  SandlerSatdSteamTableT2.txt  SandlerSubcSteamTables.txt
ThermoProblems/: TexUtils.py  command.py  config.py  document.py  make_exams.py  pick.py  stringthings.py  template.py  tpbuild.py
ThermoProblems.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ThermoProblems/Chem/: Compound.py  Properties.py  Reaction.py  System.py
ThermoProblems/Distillation/: binaryduties.py  binaryflashdepriester.py  fug.py  mccabethiele.py  results.csv
ThermoProblems/EnergyBalances/: steamtank.py
ThermoProblems/Latex/: AmmoniaSynthesis.tex  DrexelCBEHeader.tex  Example1.tex  SimpleHeader.tex  TexUtils.py  driver.tex
ThermoProblems/Steam/: steamtank.py
ThermoProblems/VLE/: txyplot.py  vle.py
docs/: Example1.tex
docs/source/: conf.py  examples.rst  index.rst  installation.rst  introduction.rst  requirements.txt  usage.rst
examples/: desuperheater.tex  vle_binary_OCM.tex
examples/compound_exam/: CompoundExam.yaml  calculus_fill_in_the_blank.yaml  compound_arithmetic.tex  derivatives_short_answer.yaml  geography_fill_in_the_blank.yaml  multiple_choice_questions.yaml  simple_integration.tex  true_false_questions.yaml
examples/simple_assignment/: SimpleAssignment.yaml  python_numerics.tex  simple_arithmetic.tex  simple_derivatives.tex  simple_integration.tex
examples/singlet/: radius.tex
examples/thermo_exam/: ExamI-11364882.tex  ExamI-31701372.tex  ExamI-35992786.tex  ExamI-46271648.tex  ExamI-50082762.tex  ExamI-59447379.tex  ExamI-60071781.tex  ExamI-65917772.tex  (+19 more)
pygacity/: answerset.py  build.py  cli.py  config.py  document.py  pdfutils.py  pick.py  stringthings.py  template.py  texutils.py
tests/: ammonia_synthesis_test.py
thermoproblems/: answerset.py  config.py  document.py  pick.py  stringthings.py  template.py  texutils.py  tpbuild.py
(+168 files in other folders)
