[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ThermoProblems"
version = "0.0.1"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A framework for problem generation using LaTeX and pythontex"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "importlib",
    "numpy",
    "pandas",
    "scipy",
    "iapws"
]
[tool.pytest.ini_options]
log_cli = true
[project.scripts]
make_exams = "ThermoProblems.make_exams:cli"