[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "thermoproblems"
version = "0.1.2"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A framework for problem generation using LaTeX and pythontex"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "iapws",
    "sandlersteam",
    "roman",
    "progressbar"
]
[tool.pytest.ini_options]
log_cli = true
[project.scripts]
tpbuild="thermoproblems.tpbuild:cli"