[metadata]
name = ThermoProblems
version = 0.0.1
description = 'Autogeneration of theromdynamics problems via python-integrated Latex'
url = 'https://github.com/cameronabrams/ThermoProblems'
author = 'Cameron Abrams'
author_email = 'cfa22@drexel.edu'
license = 'MIT'
classifiers=['Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Chemistry',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9']

[options]
packages = 
    ThermoProblems
    Sandlersteam
install_requires =
    requests
    importlib
    numpy
    pandas
    scipy
    iapws
    importlib

[options.package_data]
* = 
    *.txt 
    *.png
